--- a/Furnlite.com/Furnlite/blog.html
+++ b/Furnlite.com/Furnlite/blog.html
@@ -147,13 +147,15 @@
                                 <div class="bsingle__content">
                                     <div class="meta-info">
                                         <ul>
-                                            <li><i class="fal fa-user"></i>By Zcube</li>
-                                            <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
+                                            <li><i class="fal fa-user"></i>By Reshta Wann</li>
+                                            <li><i class="fal fa-calendar-alt"></i>  19th december 2018</li>
                                         </ul>
                                     </div>
-                                    <h2 style="color: #fff;"><a href="blog-details.html">Lorem ipsum dolor sit amet, consectetur
-                                            cing elit, sed do eiusmod tempor.</a></h2>
-                                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">Unveiling the Magic: The Materials We Use at Furnlite Interiors</a></h2>
+                                   <p>Showcase the high-quality materials Furnlite uses in their projects. Discuss the various materials available, their benefits, and how they are used to create different aesthetics.  This could include sections on:
+
+                                    Sustainable materials and Furnlite's commitment to eco-friendly design.
+                                    Using different types of wood, metals, fabrics, and finishes to achieve desired looks.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
                                     </div>
@@ -167,12 +169,12 @@
                                 <div class="bsingle__content">
                                     <div class="meta-info">
                                         <ul>
-                                            <li><i class="fal fa-user"></i>By Zcube</li>
+                                            <li><i class="fal fa-user"></i>By Amelia Daniel</li>
                                             <li><i class="far fa-comments"></i>35 Comments</li>
                                         </ul>
                                     </div>
-                                    <h2 style="color: #fff;"><a href="blog-details.html">There are many variations passages of like consectetur lorem ipsum available.</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">Breathing Life into Inspiration: Furnlite Interiors Project Spotlight.</a></h2>
+                                    <p>Feature a completed Furnlite project in each blog. Include high-quality photos showcasing the transformation and discuss the design choices made. Briefly explain the client's vision and how Furnlite brought it to life. This will serve as a portfolio piece and inspire potential clients.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
                                     </div>
@@ -193,12 +195,12 @@
                                 <div class="bsingle__content">
                                     <div class="meta-info">
                                         <ul>
-                                            <li><i class="fal fa-user"></i>By Zcube</li>
-                                            <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
+                                            <li><i class="fal fa-user"></i>By Kristal Leo</li>
+                                            <li><i class="fal fa-calendar-alt"></i>  24th March 2021</li>
                                         </ul>
                                     </div>
-                                    <h2 style="color: #fff;"><a href="blog-details.html">I must explain to you how all this mistaken idea of denouncing pleasure.</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">Transforming Your Space: The Furnlite Interiors Design Process.</a></h2>
+                                    <p>This blog would delve into the process Furnlite uses to design dream interiors for clients.  Walk through the initial consultation, understanding client needs, mood board creation, space planning, furniture selection, and final installation.  Highlight Furnlite's expertise and how they collaborate with clients to achieve their vision.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
                                     </div>
@@ -211,12 +213,12 @@
                                 <div class="bsingle__content">
                                     <div class="meta-info">
                                         <ul>
-                                            <li><i class="fal fa-user"></i>By Zcube</li>
+                                            <li><i class="fal fa-user"></i>By Jack Thomas</li>
                                             <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
                                         </ul>
                                     </div>
-                                    <h2 style="color: #fff;"><a href="blog-details.html">There are many variations passages of like consectetur lorem ipsum available.</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">Budgeting for Beauty: Tips for Achieving Your Dream Interior on a Budget.</a></h2>
+                                    <p>This blog post can target budget-conscious readers. Furnlite can offer tips for maximizing space, using multi-functional furniture, and incorporating affordable yet stylish elements. Briefly discuss financing options.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
                                     </div>
@@ -226,12 +228,12 @@
                                 <div class="bsingle__content">
                                     <div class="meta-info">
                                         <ul>
-                                            <li><i class="fal fa-user"></i>By Zcube</li>
+                                            <li><i class="fal fa-user"></i>By Rocco Siffredi</li>
                                             <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
                                         </ul>
                                     </div>
-                                    <h2 style="color: #fff;"><a href="blog-details.html">On the other hand, we denounce with of righteous indignation and dislike men.</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">The Latest Interior Design Trends: A Furnlite Interiors Perspective.</a></h2>
+                                    <p>This blog would highlight the latest trends in interior design and how Furnlite incorporates them into their projects.  Discuss trends like biophilic design, smart home integration, and maximizing small spaces.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
                                     </div>
