--- a/Furnlite.com/Furnlite/projects.html
+++ b/Furnlite.com/Furnlite/projects.html
@@ -149,8 +149,8 @@
                                     <figure class="gallery-image">
                                       <img src="img/gallery/protfolio-img05.png" alt="img" class="img">      
                                          <figcaption>
-                                            <h4>Apartment Security </h4>
-                                             <span> Residences Flats</span>
+                                            <h4>Home & Space </h4>
+                                             <span> Home Interiors</span>
                                         </figcaption>
                                     </figure>
                                 </a>
@@ -159,10 +159,10 @@
                             <div class="grid-item hover-zoomin banking">
                                   <a href="img/gallery/protfolio-img06.png" class="popup-image">
                                         <figure class="gallery-image">
-                                          <img src="img/gallery/protfolio-img06.png" alt="img" class="img">      
+                                          <img src="https://images.unsplash.com/photo-1622126807280-9b5b32b28e77?q=80&w=1460&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img" class="img">      
                                             <figcaption>
-                                                 <h4>Apartment Security </h4>
-                                             <span> Residences Flats</span>
+                                                 <h4>Office Solutions </h4>
+                                             <span> Office Interiors</span>
                                             </figcaption>
                                         </figure>
                                     </a>
@@ -174,8 +174,8 @@
                                         <figure class="gallery-image">
                                           <img src="img/gallery/protfolio-img07.png" alt="img" class="img">      
                                             <figcaption>
-                                                 <h4>Apartment Security </h4>
-                                             <span> Residences Flats</span>
+                                                <h4>Kitchen Solutions </h4>
+                                                <span> Modular Kitchens</span>
                                             </figcaption>
                                         </figure>
                                     </a>
@@ -184,10 +184,10 @@
                                 <div class="grid-item hover-zoomin banking insurance">    
                                     <a href="img/gallery/protfolio-img08.png" class="popup-image">
                                         <figure class="gallery-image">
-                                          <img src="img/gallery/protfolio-img08.png" alt="img" class="img">      
+                                          <img src="https://images.unsplash.com/photo-1606761568499-6d2451b23c66?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img" class="img">      
                                             <figcaption>
-                                                 <h4>Apartment Security </h4>
-                                             <span> Residences Flats</span>
+                                                 <h4>ClassRooms Solutions </h4>
+                                             <span> Seminar Halls</span>
                                             </figcaption>
                                         </figure>
                                     </a>
@@ -195,10 +195,10 @@
                             <div class="grid-item hover-zoomin financial">
                              <a href="img/gallery/protfolio-img09.png" class="popup-image">
                                         <figure class="gallery-image">
-                                          <img src="img/gallery/protfolio-img09.png" alt="img" class="img">      
+                                          <img src="https://images.unsplash.com/photo-1631856954655-966f97d809de?q=80&w=1446&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img" class="img">      
                                             <figcaption>
-                                                   <h4>Apartment Security </h4>
-                                             <span> Residences Flats</span>
+                                                   <h4>Retail Outlet Solutions </h4>
+                                             <span> Groccery Stores</span>
                                             </figcaption>
                                         </figure>
                                     </a>
